# stopwatch.py

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
stopwatch/: __init__.py
