[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stopwatch"
version = "1.0.0"
description = "A simple timing utility"
readme = "README.md"
authors = [{ name = "depthbomb" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["cache"]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/depthbomb/stopwatch.py"
Issues = "https://github.com/depthbomb/stopwatch.py/issues"
Changelog = "https://github.com/depthbomb/stopwatch.py/blob/master/CHANGELOG.md"
